Fixed login and sign up alignment

--- a/src/features/common/header.scss
+++ b/src/features/common/header.scss
@@ -5,7 +5,8 @@
 .searchbar{
 margin-bottom: auto;
 margin-top: auto;
-height: 60px;
+margin-left: 20em;
+height: 45px;
 background-color: #353b48;
 border-radius: 30px;
 padding: 10px;
@@ -24,7 +25,7 @@ transition: width 0.4s linear;
 
 .searchbar:hover > .search_input{
 padding: 0 10px;
-width: 250px;
+width: 200px;
 caret-color:red;
 transition: width 0.4s linear;
 }
@@ -39,7 +40,6 @@ height: 30px;
 width: 30px;
 float: right;
 display: flex;
-margin-right: 0.5em;
 justify-content: center;
 align-items: center;
 border-radius: 50%;
@@ -82,6 +82,6 @@ h4 {
 .spacing{
     justify-content: space-between;
     text-align: center;
-    margin-top: 0.5em;
+    margin-top: 0.18em;
     margin-right: 2em;
 }
